Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: shubhamdevops/java_hello_world:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service 
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      app: my-app
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
  type: LoadBalancer
