ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-set-header-Upgrade: $http_upgrade
    nginx.ingress.kubernetes.io/proxy-set-header-Connection: "upgrade"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # WebSocket (no changes)
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
          # Route /employees to backend
          - path: /employees
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
          # React frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-svc
                port:
                  number: 3000
